--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=59.0"]
+build-backend = "setuptools.build"
 
 [project]
-name = "flask_aggregator_krasnoschekovvd"
+name = "flask_aggregator"
 version = "0.0.1"
 authors = [
     { name="krasnoschekovvd", email="krasnoschekovvd@rncb.ru" },
