--- a/linux/etc/systemd/system/aggregator-gunicorn.service
+++ b/linux/etc/systemd/system/aggregator-gunicorn.service
@@ -6,6 +6,7 @@ After=network.target
 User=aggregator
 Group=aggregator-group
 WorkingDirectory=/app
+Environment="PATH=/app/flask-aggregator/bin"
 ExecStart=/usr/local/bin/aggregator_run_gunicorn.sh
 
 [Install]
