--- a/linux/etc/systemd/system/aggregator-gunicorn.service
+++ b/linux/etc/systemd/system/aggregator-gunicorn.service
@@ -6,7 +6,7 @@ After=network.target
 User=aggregator
 Group=aggregator-group
 WorkingDirectory=/app
-ExecStart=/usr/local/bin/aggregator_run_gunicorn.sh
+ExecStart=/bin/bash -c 'source /app/flask-aggregator/bin/activate && gunicorn -w 10 -b 127.0.0.1:8000 flask_aggregator.front.app:app && deactivate'
 
 [Install]
 WantedBy=multi-user.target
