--- a/linux/etc/nginx/conf.d/aggregator.conf
+++ b/linux/etc/nginx/conf.d/aggregator.conf
@@ -8,6 +8,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_connect_timeout 86400;
+        proxy_send_timeout 86400;
+        proxy_read_timeout 86400;
+
+        client_body_timeout 86400;
+
+        keepalive_timeout 86400;
     }
 
     access_log /app/log/nginx/access.log;
