--- a/linux/etc/nginx/conf.d/aggregator.conf
+++ b/linux/etc/nginx/conf.d/aggregator.conf
@@ -19,5 +19,5 @@ server {
     }
 
     access_log /app/log/nginx/access.log;
-    error_log /app/log/nginx/access.log;
+    error_log /app/log/nginx/error.log;
 }
