--- a/linux/etc/systemd/system/aggregator-collector-hosts.service
+++ b/linux/etc/systemd/system/aggregator-collector-hosts.service
@@ -4,4 +4,4 @@ Description=Collecting hosts info from virtualization
 [Service]
 User=aggregator
 WorkingDirectory=/app
-ExecStart=/bin/bash -c 'source /app/flask-aggregator/bin/activate && fa_get_hosts && deactivate'
+ExecStart=/bin/bash -c 'source /app/flask-aggregator/bin/activate && fa_get_hosts && fa_mon_hosts && deactivate'
