--- a/linux/etc/systemd/system/aggregator-collector-backups.service
+++ b/linux/etc/systemd/system/aggregator-collector-backups.service
@@ -4,4 +4,5 @@ Description=Collecting backup info from Cyberbackup
 [Service]
 User=aggregator
 WorkingDirectory=/app
+EnvironmentFile=.env
 ExecStart=/bin/bash -c 'source /app/flask-aggregator/bin/activate && fa_get_backups && deactivate'
