--- a/linux/etc/systemd/system/aggregator-collector-storages.service
+++ b/linux/etc/systemd/system/aggregator-collector-storages.service
@@ -4,4 +4,5 @@ Description=Collecting hosts info from virtualization
 [Service]
 User=aggregator
 WorkingDirectory=/app
+EnvironmentFile=.env
 ExecStart=/bin/bash -c 'source /app/flask-aggregator/bin/activate && fa_get_storages && fa_mon_storages && deactivate'
