--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,39 @@
+ansible-runner==2.4.0
 blinker==1.8.2
+build==1.2.2.post1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 et_xmlfile==2.0.0
 Flask==3.0.3
 Flask-WTF==1.2.2
-gunicorn==23.0.0
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lockfile==0.12.2
 MarkupSafe==3.0.2
 numpy==2.1.3
 openpyxl==3.1.5
 ovirt-engine-sdk-python==4.6.1
+packaging==24.2
 pandas==2.2.3
+pexpect==4.9.0
 psycopg==3.2.3
 psycopg2-binary==2.9.10
+ptyprocess==0.7.0
 pycurl==7.45.3
+pyproject_hooks==1.2.0
+python-daemon==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
+setuptools-scm==8.1.0
 six==1.16.0
 SQLAlchemy==2.0.36
+tomli==2.2.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
