rosplatforma class added

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 __pycache__
 .vscode
 .mypy_cache
-test.py
-test_vm_description.py
 *.xlsx
 *.json
 *.log
 *.yml
 *.egg-info
-venv
-passwords.sh
 .env
 .env.sh
+.gitignore
+.coverage
+htmlcov
 linux
+venv
+passwords.sh
+test.py
+test_vm_description.py
